--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 螢幕擷取畫面 2024-11-06 140321.png=@螢幕擷取畫面 2024-11-06 140321,0
 螢幕擷取畫面 2024-11-06 143453.png=@螢幕擷取畫面 2024-11-06 143453,0
+螢幕擷取畫面 2024-11-06 154704.png=@螢幕擷取畫面 2024-11-06 154704,0
